--- a/.github/workflows/Teststatements.yml
+++ b/.github/workflows/Teststatements.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: TestStatemens
+        working-directory: TestStatements
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -27,10 +27,10 @@ jobs:
         run: |
           
       - name: Restore
-        run: dotnet restore TestStatemens.sln -p:TargetFramework=net8.0 -p:EnableWindowsTargeting=true
+        run: dotnet restore TestStatements.sln -p:TargetFramework=net8.0 -p:EnableWindowsTargeting=true
 
       - name: Build
-        run: dotnet build TestStatemens.sln --configuration Release --no-restore -p:TargetFramework=net8.0 -p:EnableWindowsTargeting=true
+        run: dotnet build TestStatements.sln --configuration Release --no-restore -p:TargetFramework=net8.0 -p:EnableWindowsTargeting=true
 
       - name: Test
-        run: dotnet test TestStatemens.sln --configuration Release --no-build --verbosity normal -p:TargetFramework=net8.0 -p:EnableWindowsTargeting=true
+        run: dotnet test TestStatements.sln --configuration Release --no-build --verbosity normal -p:TargetFramework=net8.0 -p:EnableWindowsTargeting=true
