--- a/.github/workflows/CSharpBible.yml
+++ b/.github/workflows/CSharpBible.yml
@@ -25,21 +25,21 @@ jobs:
 
       - name: Remove private projects
         run: |
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Mobile/MauiApp1/MauiApp1.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Simulation/AGVFktTests/AGVFktTests.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Simulation/AGVFkt/AGVFkt.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/DB/ADO_Test/ADO_Test.csproj" 
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Libraries/CSFreeVision_/CSFreeVision.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Mobile/DXMauiApp1/DXMauiApp1.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/MyComponent/Client/MyComponent.Client.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/MyComponent/Server/MyComponent.Server.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/MyComponent/Shared/MyComponent.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/WinUI/App1/App1/App1.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/App2/App2.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/PackageDwnLd.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/BlazorApp1/BlazorApp1.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/WebApp1/BlazorApp2/BlazorApp2.csproj"
-          dotnet sln CSharpBible.sln remove "/home/runner/work/CSharp/CSharp/CSharpBible/Web/WebApp1/WebApplication1/WebApplication1/WebApplication1.csproj"
+          dotnet sln CSharpBible.sln remove "Mobile/MauiApp1/MauiApp1.csproj"
+          dotnet sln CSharpBible.sln remove "Simulation/AGVFktTests/AGVFktTests.csproj"
+          dotnet sln CSharpBible.sln remove "Simulation/AGVFkt/AGVFkt.csproj"
+          dotnet sln CSharpBible.sln remove "DB/ADO_Test/ADO_Test.csproj" 
+          dotnet sln CSharpBible.sln remove "Libraries/CSFreeVision_/CSFreeVision.csproj"
+          dotnet sln CSharpBible.sln remove "Mobile/DXMauiApp1/DXMauiApp1.csproj"
+          dotnet sln CSharpBible.sln remove "Web/MyComponent/Client/MyComponent.Client.csproj"
+          dotnet sln CSharpBible.sln remove "Web/MyComponent/Server/MyComponent.Server.csproj"
+          dotnet sln CSharpBible.sln remove "Web/MyComponent/Shared/MyComponent.csproj"
+          dotnet sln CSharpBible.sln remove "WinUI/App1/App1/App1.csproj"
+          dotnet sln CSharpBible.sln remove "App2/App2.csproj"
+          dotnet sln CSharpBible.sln remove "../PackageDwnLd.csproj"
+          dotnet sln CSharpBible.sln remove "Web/BlazorApp1/BlazorApp1.csproj"
+          dotnet sln CSharpBible.sln remove "Web/WebApp1/BlazorApp2/BlazorApp2.csproj"
+          dotnet sln CSharpBible.sln remove "Web/WebApp1/WebApplication1/WebApplication1/WebApplication1.csproj"
           
       - name: Restore
         run: dotnet restore CSharpBible.sln -p:TargetFramework=net8.0-windows
