--- a/CSharpBible/Games/SharpHack.LevelGen/SharpHack.LevelGen.csproj
+++ b/CSharpBible/Games/SharpHack.LevelGen/SharpHack.LevelGen.csproj
@@ -18,7 +18,7 @@
     <Compile Remove="obj\**" />
     <EmbeddedResource Remove="obj\**" />
     <None Remove="obj\**" />
-    <PackageReference Condition="'$(TargetFrameWork)'=='net462'" Include="IsExternalInit">
+    <PackageReference Condition="'$(TargetFrameWork.Contains(net4))'" Include="IsExternalInit">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
