--- a/CSharpBible/Graphics/CanvasWPF_CT/CanvasWPF_CT.csproj
+++ b/CSharpBible/Graphics/CanvasWPF_CT/CanvasWPF_CT.csproj
@@ -2,7 +2,7 @@
   <Import Project="..\Graphics_net.props" />
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFrameworks>net472;net48;net481;net6.0-windows;net7.0-windows;net8.0-windows</TargetFrameworks>
+    <TargetFrameworks>net472;net48;net481;net8.0-windows</TargetFrameworks>
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
