--- a/CSharpBible/Graphics/Cifar10.WPF/Cifar10.WPF.csproj
+++ b/CSharpBible/Graphics/Cifar10.WPF/Cifar10.WPF.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\CommonDialogs\CommonDialogs.csproj" />
+    <ProjectReference Include="..\..\Libraries\CommonDialogs\CommonDialogs_net.csproj" />
     <ProjectReference Include="..\libCIFAR\libCIFAR.csproj" />
   </ItemGroup>
 
